--- a/src/bp-templates/bp-nouveau/icons/bb-icons.css
+++ b/src/bp-templates/bp-nouveau/icons/bb-icons.css
@@ -433,7 +433,7 @@
 .bb-icon-link-tilt:before { content: '\e9a2'; }
 .bb-icon-paragraph-bullet:before { content: '\e9c9'; }
 .bb-icon-paragraph-numbers:before { content: '\e9ca'; }
-.bb-icon-quotes:before { content: '\e9cb'; }
+.bb-icon-quotes:before { content: '\e961'; }
 .bb-icon-file-7z:before { content: '\e9a6'; }
 .bb-icon-file-hlsm:before { content: '\e9a7'; }
 .bb-icon-file-htm:before { content: '\e9a8'; }
