#266 - Fixed custom extension row class

--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -678,7 +678,7 @@ table.extension-listing {
 		}
 	}
 
-	tbody tr td input.extension-mime[type="text"] {
+	tbody tr.custom-extension td input.extension-mime[type="text"] {
 		width: 60%;
 	}
 
