#266 - Fixed theater image height issue in smaller screens

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1155,6 +1155,10 @@ ul.bb-albums-list {
 				display: block;
 				text-align: center;
 				padding: 5px 0;
+
+				.img-block-wrap {
+					height: auto;
+				}
 			}
 
 			&.bb-media-no-preview .img-section > p {
