--- a/src/bp-core/admin/css/common.css
+++ b/src/bp-core/admin/css/common.css
@@ -767,6 +767,7 @@ table.extension-listing .icon-select-main .icon-select-button {
 table.extension-listing .icon-select-main .icon-select-button li {
   list-style: none;
   margin: 0;
+  line-height: 20px;
   white-space: nowrap;
   max-width: 100%;
   overflow: hidden;
@@ -775,7 +776,8 @@ table.extension-listing .icon-select-main .icon-select-button li {
 }
 
 table.extension-listing .icon-select-main .icon-select-button i {
-  font-size: 20px;
+  font-size: 22px;
+  color: #888;
   margin-right: 10px;
   vertical-align: middle;
 }
@@ -786,33 +788,52 @@ table.extension-listing .icon-select-main .custom-extension-list {
   right: 0;
   min-width: 200px;
   background-color: #fff;
-  box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.1);
-  padding: 10px 0;
+  border: 1px solid #ccd0d4;
+  border-radius: 3px;
+  box-shadow: 0 2px 12px 1px rgba(0, 0, 0, 0.1);
+  padding: 0;
   bottom: 100%;
   max-height: 60vh;
   overflow: auto;
   display: none;
 }
 
-table.extension-listing .icon-select-main .custom-extension-list .custom-extension-list-select {
+table.extension-listing .icon-select-main .custom-extension-list ul.custom-extension-list-select {
   font-size: 0;
+  color: #888;
 }
 
 table.extension-listing .icon-select-main .custom-extension-list li {
   list-style: none;
   cursor: pointer;
-  font-size: 13px;
-  padding: 5px 10px;
+  font-size: 14px;
+  padding: 8px 12px;
+  margin: 0;
 }
 
 table.extension-listing .icon-select-main .custom-extension-list li:hover {
   background-color: #f9f9f9;
 }
 
+table.extension-listing .icon-select-main .custom-extension-list li:first-child {
+  border-bottom: 1px solid #eee;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+table.extension-listing .icon-select-main .custom-extension-list li:nth-child(2) {
+  padding-top: 10px;
+}
+
+table.extension-listing .icon-select-main .custom-extension-list li:last-child {
+  padding-bottom: 10px;
+}
+
 table.extension-listing .icon-select-main .custom-extension-list i {
-  font-size: 25px;
+  font-size: 28px;
   margin-right: 10px;
   vertical-align: middle;
+  color: #888;
 }
 
 @media screen and (max-width: 1023px) {
