--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -809,6 +809,7 @@ table.extension-listing {
 			li {
 				list-style: none;
 				margin: 0;
+				line-height: 20px;
 				white-space: nowrap;
 				max-width: 100%;
 				overflow: hidden;
@@ -817,7 +818,8 @@ table.extension-listing {
 			}
 
 			i {
-				font-size: 20px;
+				font-size: 22px;
+				color: #888;
 				margin-right: 10px;
 				vertical-align: middle;
 			}
@@ -829,32 +831,51 @@ table.extension-listing {
 			right: 0;
 			min-width: 200px;
 			background-color: #fff;
-			box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.1);
-			padding: 10px 0;
+			border: 1px solid #ccd0d4;
+			border-radius: 3px;
+			box-shadow: 0 2px 12px 1px rgba(0, 0, 0, 0.1);
+			padding: 0;
 			bottom: 100%;
 			max-height: 60vh;
 			overflow: auto;
 			display: none;
 
-			.custom-extension-list-select {
+			ul.custom-extension-list-select {
 				font-size: 0;
+				color: #888;
 			}
 
 			li {
 				list-style: none;
 				cursor: pointer;
-				font-size: 13px;
-				padding: 5px 10px;
+				font-size: 14px;
+				padding: 8px 12px;
+				margin: 0;
 
 				&:hover {
 					background-color: #f9f9f9;
 				}
 			}
 
+			li:first-child {
+				border-bottom: 1px solid #eee;
+				padding-top: 10px;
+				padding-bottom: 10px;
+			}
+
+			li:nth-child(2) {
+				padding-top: 10px;
+			}
+
+			li:last-child {
+				padding-bottom: 10px;
+			}
+
 			i {
-				font-size: 25px;
+				font-size: 28px;
 				margin-right: 10px;
 				vertical-align: middle;
+				color: #888;
 			}
 		}
 	}
