--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -12079,7 +12079,7 @@ a.theater-command {
   visibility: visible;
 }
 
-[dir=rtl] a.theater-command {
+[dir="rtl"] a.theater-command {
   right: auto;
   left: 0;
   justify-content: center;
@@ -12092,7 +12092,7 @@ a.theater-command.bb-next-media {
   justify-content: flex-end;
 }
 
-[dir=rtl] a.theater-command.bb-next-media {
+[dir="rtl"] a.theater-command.bb-next-media {
   left: auto;
   right: 0;
   width: 20%;
@@ -13352,7 +13352,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
   padding: 0;
 }
 
-[dir=rtl] .bb-document-theater .bb-media-section .theater-command.bb-prev-document {
+[dir="rtl"] .bb-document-theater .bb-media-section .theater-command.bb-prev-document {
   right: auto;
   left: -45px;
 }
@@ -13364,7 +13364,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
   padding: 0;
 }
 
-[dir=rtl] .bb-document-theater .bb-media-section .theater-command.bb-next-document {
+[dir="rtl"] .bb-document-theater .bb-media-section .theater-command.bb-next-document {
   right: -45px;
   left: auto;
 }
@@ -14256,7 +14256,7 @@ body.document #bp-media-single-folder .album-single-view .bp-media-header-wrap .
   float: left;
 }
 
-[dir=rtl] #bp-media-single-folder .bp-media-header-wrap .document-breadcrumb li:after {
+[dir="rtl"] #bp-media-single-folder .bp-media-header-wrap .document-breadcrumb li:after {
   content: "\f341";
 }
 
@@ -14629,7 +14629,7 @@ body.document #bp-media-single-folder .album-single-view .bp-media-header-wrap .
   line-height: 1;
 }
 
-[dir=rtl] .location-folder-list-wrap-main .ac_document_search_folder_list .breadcrumbs-append-ul-li .item span:before, [dir=rtl]
+[dir="rtl"] .location-folder-list-wrap-main .ac_document_search_folder_list .breadcrumbs-append-ul-li .item span:before, [dir="rtl"]
 .location-folder-list-wrap-main .location-folder-list-wrap .breadcrumbs-append-ul-li .item span:before {
   content: "\e8ab";
   float: right;
@@ -14754,7 +14754,7 @@ body.document #bp-media-single-folder .album-single-view .bp-media-header-wrap .
   font-size: 16px;
 }
 
-[dir=rtl] .location-folder-list-wrap-main .ac_document_search_folder_list .location-folder-list li span:before, [dir=rtl]
+[dir="rtl"] .location-folder-list-wrap-main .ac_document_search_folder_list .location-folder-list li span:before, [dir="rtl"]
 .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li span:before {
   float: right;
   margin-right: 0;
@@ -14790,15 +14790,15 @@ body.document #bp-media-single-folder .album-single-view .bp-media-header-wrap .
   transition: all ease 0.3s;
 }
 
-[dir=rtl] .location-folder-list-wrap-main .ac_document_search_folder_list .location-folder-list li .sub-menu-anchor, [dir=rtl]
+[dir="rtl"] .location-folder-list-wrap-main .ac_document_search_folder_list .location-folder-list li .sub-menu-anchor, [dir="rtl"]
 .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li .sub-menu-anchor {
   left: initial;
   right: 5px;
 }
 
-[dir=rtl] .location-folder-list-wrap-main .ac_document_search_folder_list .location-folder-list li .sub-menu-anchor:before, [dir=rtl]
+[dir="rtl"] .location-folder-list-wrap-main .ac_document_search_folder_list .location-folder-list li .sub-menu-anchor:before, [dir="rtl"]
 .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li .sub-menu-anchor:before {
-  content: '\e8ab';
+  content: "\e8ab";
 }
 
 .location-folder-list-wrap-main .ac_document_search_folder_list .location-folder-list li ul,
