#266 - Fixed spacing issue of "click to download text"

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -963,9 +963,13 @@ span.dashicons.dashicons-admin-file:before {
 				.document-description,
 				.document-extension-description,
 				.document-helper-text {
-					display: inline-block;
+					float: left;
 					color: #939597;
 					font-size: 13px;
+				}
+
+				.document-description {
+					margin-right: 8px;
 				}
 
 				.document-extension-description {
