#266 - Fixed create folder in popup title size issue, Fixed activity document block vertical alignment issue

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -3131,6 +3131,7 @@ body.document  #bp-media-single-folder  .album-single-view .bp-media-header-wrap
 	}
 
 	.bb-model-header p {
+		font-size: 17px;
 		font-weight: 500;
 		margin: 0;
 	}
