--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -853,23 +853,27 @@ table.extension-listing {
 				padding: 8px 12px;
 				margin: 0;
 
+				&:first-child {
+					border-bottom: 1px solid #eee;
+					padding-top: 10px;
+					padding-bottom: 10px;
+				}
+
+				&:nth-child(2) {
+					padding-top: 10px;
+				}
+
+				&:last-child {
+					padding-bottom: 10px;
+				}
+
 				&:hover {
 					background-color: #f9f9f9;
 				}
-			}
 
-			li:first-child {
-				border-bottom: 1px solid #eee;
-				padding-top: 10px;
-				padding-bottom: 10px;
-			}
-
-			li:nth-child(2) {
-				padding-top: 10px;
-			}
-
-			li:last-child {
-				padding-bottom: 10px;
+				span {
+					vertical-align: middle;
+				}
 			}
 
 			i {
