#266 - extension table save button spacing

--- a/src/bp-core/admin/css/common.css
+++ b/src/bp-core/admin/css/common.css
@@ -592,6 +592,10 @@ body.buddyboss_page_bbp-converter .bp-admin-card h2:before,
   padding: 0;
 }
 
+.section-bp_document_settings_extensions + .submit > a {
+  margin-left: 5px;
+}
+
 table.extension-listing {
   border-radius: 4px;
   margin: 9px 0 12px;
