--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -616,6 +616,10 @@ body.buddyboss_page_bbp-converter .bp-admin-card h2:before,
 	}
 }
 
+.section-bp_document_settings_extensions + .submit > a {
+	margin-left: 5px;
+}
+
 table.extension-listing {
 	border-radius: 4px;
 	margin: 9px 0 12px;
