--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1975,7 +1975,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 			}
 
 			img {
-				padding: 20px 0;
+				padding: 20px;
 				max-height: calc(90vh - 30px);
 			}
 
@@ -2005,13 +2005,16 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 			position: absolute;
 			top: 0;
 			left: 0;
-			padding: 6px 0;
+			padding: 6px;
 			right: 375px;
 			text-align: center;
 			border-bottom: 1px solid #ecedee;
 			font-size: 16px;
 			font-weight: 500;
 			border-radius: 4px 0 0 0;
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
 		}
 
 	}
