#266 - Fixed uploader height issue

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1598,7 +1598,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 		display: flex;
 		background: #f0f3f7;
 		text-align: center;
-		height: 120px;
+		height: 100%;
 		width: 120px;
 		flex-flow: column;
 		align-items: center;
