#266 - Fixed activity document spacing with activity link preview

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -622,6 +622,11 @@
 	position: relative;
 	overflow: auto;
 	zoom: 1;
+	margin: 0 -3px;
+
+	& + .bb-activity-media-wrap {
+		margin-top: 10px;
+	}
 
 	.activity-video-preview & {
 		border: 0;
