#266 - Fixed document uploader spacing issue in document theater comment

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1608,6 +1608,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 		background: #f0f3f7;
 		text-align: center;
 		height: 100%;
+		min-height: 120px;
 		width: 120px;
 		flex-flow: column;
 		align-items: center;
