--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -13049,6 +13049,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
   background: #f0f3f7;
   text-align: center;
   height: 100%;
+  min-height: 120px;
   width: 120px;
   flex-flow: column;
   align-items: center;
