--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -675,6 +675,8 @@ a.bb-close-model {
 				width: 100%;
 				resize: none;
 				margin-bottom: 10px;
+				line-height: 1.5;
+    			min-height: 75px;
 
 				&:focus {
 
