#266 - Text formatting toolbar bold icon bolder

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -446,6 +446,7 @@
 	.medium-editor-action-bold b:before {
 		content: "\e94a";
 		font-size: 18px;
+		font-weight: bold;
 	}
 
 	.medium-editor-action-italic b:before {
