--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -12,7 +12,7 @@
 .fb-post.fb_iframe_widget {
 	margin: 0 -3px;
 
-	& + .bb-activity-media-wrap {
+	+ .bb-activity-media-wrap {
 		margin-top: 15px;
 	}
 
