--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -2197,7 +2197,7 @@ input.search-query-input {
 .medium-editor-toolbar-actions .medium-editor-action-bold b:before {
   content: "\e94a";
   font-size: 18px;
-  font-weight: bold;
+  font-weight: 600;
 }
 
 .medium-editor-toolbar-actions .medium-editor-action-italic b:before {
