#266 - Fixed Forum document background color issue

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -887,6 +887,7 @@ span.dashicons.dashicons-admin-file:before {
 	width: 100%;
 
 	.bb-activity-media-elem.document-activity {
+		background-color: #fff;
 		border: 1px solid #e7e9ec;
 		border-radius: 5px;
 		display: inline-block;
