--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -13476,6 +13476,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
 .bb-document-theater .bb-media-section .document-audio {
   display: flex;
   height: 100%;
+  width: 100%;
   padding: 0 15px;
   align-items: center;
   justify-content: center;
@@ -13484,6 +13485,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
 
 .bb-document-theater .bb-media-section .document-audio audio {
   outline: 0;
+  min-width: 80%;
 }
 
 .bb-document-theater .bb-media-section h3 {
