#266 - updated bold icon and added file video icon

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -443,10 +443,13 @@
 		}
 	}
 
-	.medium-editor-action-bold b:before {
-		content: "\e94a";
-		font-size: 18px;
-		font-weight: 600;
+	.medium-editor-action-bold b {
+		margin-top: 1px;
+
+		&:before {
+			content: "\e94a";
+			font-size: 18px;
+		}
 	}
 
 	.medium-editor-action-italic b:before {
