--- a/src/bp-templates/bp-nouveau/icons/bb-icons.css
+++ b/src/bp-templates/bp-nouveau/icons/bb-icons.css
@@ -467,6 +467,7 @@
 .bb-icon-file-hlsb:before { content: '\e9c4'; }
 .bb-icon-file-xml:before { content: '\e9c5'; }
 .bb-icon-file-png:before { content: '\e9c6'; }
+.bb-icon-file-video:before { content: '\e962'; }
 .bb-icon-trash-small:before { content: '\eaea'; }
 .bb-icon-rounded-instagram:before { content: '\eaec'; }
 .bb-icon-rounded-facebook:before { content: '\eaed'; }
