#266 - hide document preview and shorten helper text in document theater sidebar

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1901,8 +1901,14 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 
 				.document-preview-wrap,
 				.document-text-wrap,
-				.document-audio-wrap {
+				.document-audio-wrap,
+				.more_text_view,
+				.document-helper-text-click {
 					display: none;
+				}
+
+				.document-helper-text-inner {
+					text-transform: capitalize;
 				}
 
 			}
